--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@ Data/SDM_predictions
 Data/SDM_threshold
 Data/FIA/bob
 Data/2022-12-07_ENMeval_results
+.Rproj.user/shared/notebooks/paths
+.Rhistory
+.DS_Store
+.Rproj.user/shared/notebooks/paths
+Data/.DS_Store
+scr/.DS_Store
