--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,8 @@ Data/2022-12-07_ENMeval_results
 .Rproj.user/shared/notebooks/paths
 Data/.DS_Store
 scr/.DS_Store
+.DS_Store
+.Rhistory
+.Rproj.user/shared/notebooks/paths
+Data/.DS_Store
+Data/Derived/.DS_Store
